prevent chat notes textarea shift on focus - closes #10936

--- a/ui/chat/css/_chat.scss
+++ b/ui/chat/css/_chat.scss
@@ -21,13 +21,12 @@
     &.note textarea {
       font-size: 0.9em;
       flex-grow: 1;
-      border: none;
+      border: 1px solid transparent;
       background-color: transparent;
       line-height: 1.7em;
       outline: none;
       resize: none;
       &:focus {
-        border: $border;
         border-color: $c-primary;
       }
     }
